retour_à_l'ancienne_version

--- a/src/components/Adlist/Adcard/Adcard.css
+++ b/src/components/Adlist/Adcard/Adcard.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 1000px;
   height: 200px;
-  border: solid 1px pink;
+  border: solid 1px lightgray;
   padding: 20px;
   margin-bottom: 10px;
   cursor: pointer;
@@ -10,7 +10,7 @@
 }
 
 .adcard:hover {
-  background: pink;
+  background: lightgrey;
 }
 
 .adcard_content {
